# todoin

./: Cargo.toml  Dockerfile  shell.nix
application/: Cargo.toml
application/src/: error.rs  lib.rs
application/src/repositories/: migration.rs  mod.rs  project.rs  task.rs
domain/: Cargo.toml
domain/src/models/: project.rs  task.rs
presentation/: Cargo.toml  shell.nix
presentation/src/: config.rs  error.rs  main.rs  prelude.rs
presentation/src/routes/project/: delete.rs  grant.rs  insert.rs  list.rs  mod.rs  retrieve.rs  revoke.rs  set_active.rs
