[workspace]
resolver = "3"
members = ["presentation", "application", "domain"]

[workspace.dependencies]
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
clin = { git = "https://github.com/Baguuc/clin", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
